k8s/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: howdusty
  namespace: brumaire-howdusty-staging
spec:
  selector:
    matchLabels:
      app: howdusty
  replicas: 1
  template:
    metadata:
      labels:
        app: howdusty
    spec:
      containers:
        - name: howdusty
          image: registry.h8l.io/brumaire/howdusty:staging
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 0.5
              memory: 512Mi
            requests:
              cpu: 0.5
              memory: 512Mi
      imagePullSecrets:
        - name: harbor-registry
