k8s/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: howdusty
  namespace: brumaire-howdusty-staging
spec:
  selector:
    app: howdusty
  ports:
    - name: http
      port: 3000
      targetPort: 3000
