k8s/staging/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: howdusty
  namespace: brumaire-howdusty-staging
spec:
  entryPoints:
    - http
  routes:
    - kind: Rule
      match: Host(`howdusty.stagedenv.com`)
      middlewares:
        - name: https-redirect
          namespace: traefik
      services:
        - name: howdusty
          port: 3000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: howdusty-tls
  namespace: brumaire-howdusty-staging
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: Host(`howdusty.stagedenv.com`)
      services:
        - name: howdusty
          port: 3000
  tls:
    certResolver: default
